[gd_scene load_steps=30 format=4 uid="uid://dc2877mst36g5"]

[ext_resource type="Script" uid="uid://c5o3kxklnnlor" path="res://Scenes/Game/game.gd" id="1_huoen"]
[ext_resource type="Texture2D" uid="uid://bprjsx4wnit6n" path="res://Textures/Grass_spring.png" id="2_7jvlm"]
[ext_resource type="Texture2D" uid="uid://iq03yt0omy57" path="res://Textures/dirt.png" id="3_qtymf"]
[ext_resource type="Texture2D" uid="uid://cl1wgniv3ka0i" path="res://Textures/Flower.png" id="4_ypmwd"]
[ext_resource type="Texture2D" uid="uid://cghd2yelq3wso" path="res://Textures/Grass.png" id="5_oejk7"]
[ext_resource type="Texture2D" uid="uid://b88tlputq7qf5" path="res://Textures/tufts and lumps.png" id="6_upfqs"]
[ext_resource type="PackedScene" uid="uid://bwwm5yuwrc2tf" path="res://Scenes/Farm/farm_grid.tscn" id="7_8e3kh"]
[ext_resource type="PackedScene" uid="uid://bswelfcys8bfe" path="res://Scenes/Robot/robot.tscn" id="8_56qi8"]
[ext_resource type="Script" uid="uid://nnrapwttxrgk" path="res://MiscScripts/test_panel.gd" id="9_upfqs"]
[ext_resource type="FontFile" uid="uid://3ytuodnv4vag" path="res://Fonts/ThaleahFat.ttf" id="10_8e3kh"]
[ext_resource type="Script" uid="uid://b5n8ycdnagaug" path="res://Scenes/UI/outputConsole.gd" id="11_56qi8"]
[ext_resource type="FontFile" uid="uid://ciomtf2n18hg1" path="res://Fonts/MatchupPro.ttf" id="12_2vowc"]
[ext_resource type="Texture2D" uid="uid://qqy8f5nih4k4" path="res://UI/indicator.png" id="12_lemb1"]
[ext_resource type="StyleBox" uid="uid://ccxs3w5yce5y2" path="res://UI/Styles/Panel_back.tres" id="12_yox4t"]
[ext_resource type="FontFile" uid="uid://cmvco7md03lx0" path="res://Fonts/TinyUnicode.ttf" id="13_yox4t"]
[ext_resource type="Texture2D" uid="uid://btvwmeufvxd22" path="res://Textures/color palette.png" id="14_lemb1"]
[ext_resource type="StyleBox" uid="uid://btd4k0yqt5gr3" path="res://UI/Styles/Panel_front.tres" id="16_lemb1"]
[ext_resource type="Texture2D" uid="uid://c4hhqh8ei3lok" path="res://UI/confirm.png" id="17_a6ftd"]
[ext_resource type="Texture2D" uid="uid://fot6k1pccqp5" path="res://UI/cancel.png" id="18_nxex1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qxrlw"]
resource_name = "GrassTiles"
texture = ExtResource("2_7jvlm")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/top_right_corner = 0
4:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wrm1d"]
texture = ExtResource("3_qtymf")
0:0/0 = 0
0:0/0/terrain_set = 1
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 1
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 1
2:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 1
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 1
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 1
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 1
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 1
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 1
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0 = 0
4:1/0/terrain_set = 1
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 1
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 1
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 1
2:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 1
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/top_right_corner = 0
4:2/0 = 0
4:2/0/terrain_set = 1
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/top_left_corner = 0

[sub_resource type="TileSet" id="TileSet_wrm1d"]
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(0.501961, 1, 0.25098, 1)
terrain_set_1/mode = 1
terrain_set_1/terrain_0/name = "Dirt"
terrain_set_1/terrain_0/color = Color(0.501961, 0.345098, 0.639216, 1)
sources/0 = SubResource("TileSetAtlasSource_qxrlw")
sources/1 = SubResource("TileSetAtlasSource_wrm1d")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1phco"]
texture = ExtResource("4_ypmwd")
0:0/next_alternative_id = 10
0:0/0 = 0
1:0/next_alternative_id = 2
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nb51f"]
texture = ExtResource("5_oejk7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nnt18"]
texture = ExtResource("6_upfqs")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ewbju"]
sources/0 = SubResource("TileSetAtlasSource_1phco")
sources/1 = SubResource("TileSetAtlasSource_nb51f")
sources/3 = SubResource("TileSetAtlasSource_nnt18")

[sub_resource type="Theme" id="Theme_a6ftd"]
OptionButton/icons/arrow = ExtResource("12_lemb1")
PopupMenu/constants/h_separation = 0
PopupMenu/constants/icon_max_width = 0
PopupMenu/constants/indent = 0
PopupMenu/constants/item_end_padding = 0
PopupMenu/constants/item_start_padding = 0
PopupMenu/constants/outline_size = 0
PopupMenu/constants/separator_outline_size = 0
PopupMenu/constants/v_separation = 0
PopupMenu/font_sizes/font_separator_size = 16
PopupMenu/font_sizes/font_size = 16
PopupMenu/fonts/font = ExtResource("13_yox4t")
PopupMenu/fonts/font_separator = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/separator = null

[sub_resource type="LabelSettings" id="LabelSettings_h4fw4"]
font = ExtResource("12_2vowc")
font_color = Color(0.937255, 0.807843, 0.537255, 1)

[sub_resource type="FontVariation" id="FontVariation_rku1e"]
base_font = ExtResource("13_yox4t")
spacing_top = -4

[node name="Game" type="Node"]
script = ExtResource("1_huoen")

[node name="Backgroud" type="Node2D" parent="."]
z_index = -10
scale = Vector2(1.25, 1.25)

[node name="Farm" type="TileMapLayer" parent="Backgroud"]
tile_map_data = PackedByteArray("AAAKAA0AAQABAAEAAAAKAAwAAQABAAEAAAAKAAsAAQABAAEAAAAKAAoAAQABAAEAAAAKAAkAAQABAAEAAAAKAAgAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAJAA0AAQABAAEAAAAJAAwAAQABAAEAAAAJAAsAAQABAAEAAAAJAAoAAQABAAEAAAAJAAkAAQABAAEAAAAJAAgAAQABAAEAAAAJAAcAAQABAAEAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAIAA0AAQABAAEAAAAIAAwAAQABAAEAAAAIAAsAAQABAAEAAAAIAAoAAQABAAEAAAAIAAkAAQABAAEAAAAIAAgAAQABAAEAAAAIAAcAAQABAAEAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAHAA0AAQABAAEAAAAHAAwAAQABAAEAAAAHAAsAAQABAAEAAAAHAAoAAQABAAEAAAAHAAkAAQABAAEAAAAHAAgAAQABAAEAAAAHAAcAAQABAAEAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAGAA0AAQABAAEAAAAGAAwAAQABAAEAAAAGAAsAAQABAAEAAAAGAAoAAQABAAEAAAAGAAkAAQABAAEAAAAGAAgAAQABAAEAAAAGAAcAAQABAAEAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAFAA0AAQABAAEAAAAFAAwAAQABAAEAAAAFAAsAAQABAAEAAAAFAAoAAQABAAEAAAAFAAkAAQABAAEAAAAFAAgAAQABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAEAA0AAQABAAEAAAAEAAwAAQABAAEAAAAEAAsAAQABAAEAAAAEAAoAAQABAAEAAAAEAAkAAQABAAEAAAAEAAgAAQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAUAAQABAAEAAAAEAAQAAQABAAEAAAADAA0AAQABAAEAAAADAAwAAQABAAEAAAADAAsAAQABAAEAAAADAAoAAQABAAEAAAADAAkAAQABAAEAAAADAAgAAQABAAEAAAADAAcAAQABAAEAAAADAAYAAQABAAEAAAADAAUAAQABAAEAAAADAAQAAQABAAEAAAACAA0AAQABAAEAAAACAAwAAQABAAEAAAACAAsAAQABAAEAAAACAAoAAQABAAEAAAACAAkAAQABAAEAAAACAAgAAQABAAEAAAACAAcAAQABAAEAAAACAAYAAQABAAEAAAACAAUAAQABAAEAAAACAAQAAQABAAEAAAABAA0AAQABAAEAAAABAAwAAQABAAEAAAABAAsAAQABAAEAAAABAAoAAQABAAEAAAABAAkAAQABAAEAAAABAAgAAQABAAEAAAABAAcAAQABAAEAAAABAAYAAQABAAEAAAABAAUAAQABAAEAAAABAAQAAQABAAEAAAAAAAUAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAMAAQAAAAAAAAABAAMAAQABAAAAAAACAAMAAQABAAAAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAgAAQAAAAEAAAAAAAkAAQAAAAEAAAAAAAoAAQAAAAEAAAAAAAsAAQAAAAEAAAAAAAwAAQAAAAEAAAAAAA0AAQAAAAEAAAACAA4AAQABAAIAAAABAA4AAQABAAIAAAAAAA4AAQAAAAIAAAADAAMAAQABAAAAAAADAA4AAQABAAIAAAAEAAMAAQABAAAAAAAEAA4AAQABAAIAAAAFAAMAAQABAAAAAAAFAA4AAQABAAIAAAAGAAMAAQABAAAAAAAGAA4AAQABAAIAAAAHAAMAAQABAAAAAAAHAA4AAQABAAIAAAAIAAMAAQABAAAAAAAIAA4AAQABAAIAAAAJAAMAAQABAAAAAAAJAA4AAQABAAIAAAAKAAMAAQABAAAAAAAKAA4AAQABAAIAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAMAAQACAAAAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAALAAkAAQACAAEAAAALAAoAAQACAAEAAAALAAsAAQACAAEAAAALAAwAAQACAAEAAAALAA0AAQACAAEAAAALAA4AAQACAAIAAAA=")
tile_set = SubResource("TileSet_wrm1d")
metadata/_edit_lock_ = true

[node name="Ground" type="TileMapLayer" parent="Backgroud"]
tile_map_data = PackedByteArray("AAAAAA4AAAABAAEAAAAAAA0AAAABAAEAAAAAAAwAAAABAAEAAAAAAAMAAAABAAEAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAEAAAAAAAQAAAABAAEAAAABAAUAAAACAAEAAAABAAYAAAACAAEAAAABAAcAAAACAAEAAAABAAgAAAACAAEAAAABAAkAAAACAAEAAAABAAoAAAACAAEAAAABAAsAAAACAAEAAAABAAwAAAACAAEAAAABAA4AAAABAAEAAAACAA4AAAABAAEAAAADAA4AAAABAAEAAAAEAA4AAAABAAEAAAAFAA4AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAAJAA4AAAABAAEAAAAKAA4AAAABAAEAAAABAAQAAAADAAAAAAAKAAQAAAAEAAAAAAABAAMAAAABAAEAAAACAAMAAAABAAEAAAADAAMAAAABAAEAAAAEAAMAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAIAAMAAAABAAEAAAAJAAMAAAABAAEAAAAKAAMAAAABAAEAAAAJAAQAAAABAAIAAAAIAAQAAAABAAIAAAAHAAQAAAABAAIAAAAGAAQAAAABAAIAAAAFAAQAAAABAAIAAAAEAAQAAAABAAIAAAADAAQAAAABAAIAAAACAAQAAAABAAIAAAAJAA0AAAABAAAAAAAKAA0AAAAEAAEAAAAIAA0AAAABAAAAAAAHAA0AAAABAAAAAAAGAA0AAAABAAAAAAAFAA0AAAABAAAAAAAEAA0AAAABAAAAAAADAA0AAAABAAAAAAACAA0AAAABAAAAAAABAA0AAAADAAEAAAALAA4AAAABAAEAAAALAA0AAAABAAEAAAALAAwAAAABAAEAAAALAAsAAAABAAEAAAALAAoAAAABAAEAAAALAAkAAAABAAEAAAALAAgAAAABAAEAAAALAAcAAAABAAEAAAALAAYAAAABAAEAAAALAAUAAAABAAEAAAALAAQAAAABAAEAAAALAAMAAAABAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAgAAAAAAAEAAAAKAAkAAAAAAAEAAAAKAAoAAAAAAAEAAAAKAAsAAAAAAAEAAAAKAAwAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_wrm1d")
metadata/_edit_lock_ = true

[node name="Clutter" type="TileMapLayer" parent="Backgroud"]
tile_map_data = PackedByteArray("AAD+/xMAAQACAAAAAAD//wUAAQABAAEAAAD//w4AAQACAAEAAAAAAP//AQAAAAAAAAAAAAkAAQAAAAAAAAACAAIAAQADAAIAAAADABIAAQADAAEAAAAFAAAAAQACAAIAAAAHAAAAAQAAAAIAAAAIAAEAAQABAAEAAAAIABMAAQACAAEAAAAJAP//AQAAAAEAAAALAP//AQADAAIAAAALAAIAAQABAAEAAAALAAMAAQACAAEAAAAOAAAAAQAAAAEAAAAPABIAAQADAAIAAAAQAAEAAQACAAIAAAAQAA4AAQACAAAAAAASAP7/AwACAAMAAAASAP//AQAAAAEAAAATAAgAAQADAAEAAAAUAAoAAQABAAIAAAAVAAkAAQAAAAIAAAAWAAEAAQADAAIAAAAWAAUAAQABAAIAAAAXAAMAAQADAAEAAAAXAAgAAQADAAIAAAAYAP//AAAEAAEAAAAYAAYAAQAAAAIAAAAYABEAAQADAAEAAAAZAP//AQABAAIAAAAZAAIAAQABAAIAAAAZAA8AAQABAAIAAAAbAAMAAQACAAIAAAAbAA0AAQACAAAAAAAcAP7/AQAAAAAAAAAdAAIAAQAAAAEAAAAdAAYAAQABAAIAAAAeAP//AQADAAEAAAAeAAoAAQAAAAIAAAAfAA0AAQAAAAIAAAAfABIAAQADAAEAAAAgAAEAAQAAAAIAAAAgAAsAAQADAAEAAAAgAA8AAQAAAAIAAAAhAP//AQABAAIAAAAhAAUAAQACAAEAAAATAA4AAwAAAAIAAAD+/wgAAwACAAMAAAAAAAIAAwACAAMAAAAAAAYAAwACAAIAAAAEAAMAAwABAAIAAAAHABQAAwACAAIAAAAIAP7/AwABAAMAAAAKABQAAwABAAIAAAANAP//AwADAAIAAAAPAP7/AwACAAIAAAAQABEAAwABAAIAAAARAAIAAwABAAIAAAARAA4AAwACAAIAAAATAAIAAwAAAAMAAAAVABQAAwAAAAIAAAAWABIAAwACAAMAAAAXAAwAAAAFAAAAAAAYAAEAAwACAAMAAAAZAAcAAwABAAMAAAAcAAQAAwACAAMAAAAcAA4AAwACAAIAAAAcABEAAwACAAMAAAAdAAkAAwAAAAIAAAAeAAEAAwACAAIAAAAeABEAAwABAAMAAAAgAAkAAwACAAMAAAAgABMAAwACAAMAAAAhAAQAAwACAAIAAAAhAAsAAwAAAAIAAAADAAIAAAAAAAIAAAARAAoAAAAAAAEAAAAYAAsAAAAEAAAAAAAcAAkAAAACAAAAAAAdAAwAAAADAAMAAAATAAUAAAAAAAAAAAANAAQAAAAFAAAAAAANAAsAAAADAAMAAAAeAAYAAAAEAAIAAAA=")
tile_set = SubResource("TileSet_ewbju")
metadata/_edit_lock_ = true

[node name="FarmGrid" parent="." instance=ExtResource("7_8e3kh")]

[node name="Robot" parent="." instance=ExtResource("8_56qi8")]
position = Vector2(240, 180)
offset = Vector2(0, -13)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(320, 180)
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorPalette" type="Sprite2D" parent="UI"]
position = Vector2(-30, 224)
texture = ExtResource("14_lemb1")

[node name="TestPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -179.0
offset_right = 61.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
script = ExtResource("9_upfqs")

[node name="Functions" type="VBoxContainer" parent="UI/TestPanel"]
layout_mode = 1
offset_right = 81.0
offset_bottom = 131.0
theme_override_constants/separation = 1

[node name="PlantarBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Plantar"

[node name="RegarBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Regar"

[node name="ColherBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Colher"

[node name="MoveBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Mover"

[node name="OriginBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Origem"

[node name="MoveNextBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Proximo"

[node name="MovePreviousBtn" type="Button" parent="UI/TestPanel/Functions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
theme_override_font_sizes/font_size = 16
text = "Anterior"

[node name="VSeparator" type="VSeparator" parent="UI/TestPanel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/TestPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_right = 1.0
offset_bottom = 44.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TestPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/TestPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
text = "Cell:"

[node name="Coords" type="HBoxContainer" parent="UI/TestPanel/Panel/VBoxContainer"]
layout_mode = 2

[node name="X" type="LineEdit" parent="UI/TestPanel/Panel/VBoxContainer/Coords"]
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_fonts/font = ExtResource("13_yox4t")
placeholder_text = "x"
max_length = 2
emoji_menu_enabled = false
virtual_keyboard_type = 2
flat = true

[node name="Y" type="LineEdit" parent="UI/TestPanel/Panel/VBoxContainer/Coords"]
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_fonts/font = ExtResource("13_yox4t")
placeholder_text = "y"
max_length = 2
flat = true

[node name="Panel2" type="Panel" parent="UI/TestPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_top = 46.0
offset_right = 1.0
offset_bottom = 90.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TestPanel/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/TestPanel/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_yox4t")
text = "Semente"

[node name="OptionButton" type="OptionButton" parent="UI/TestPanel/Panel2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_a6ftd")
theme_override_fonts/font = ExtResource("13_yox4t")
flat = true
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Cenoura"
popup/item_0/id = 0
popup/item_1/text = "Cebola"
popup/item_1/id = 1
popup/item_2/text = "Rabanete"
popup/item_2/id = 2

[node name="Output" type="Panel" parent="UI"]
custom_minimum_size = Vector2(280, 88)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -88.0
offset_right = 295.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("12_yox4t")
script = ExtResource("11_56qi8")

[node name="Margins" type="MarginContainer" parent="UI/Output"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="UI/Output/Margins"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="UI/Output/Margins/VBox"]
layout_mode = 2
text = "Saída do Console"
label_settings = SubResource("LabelSettings_h4fw4")
uppercase = true

[node name="Console" type="RichTextLabel" parent="UI/Output/Margins/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.792157, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_rku1e")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = ExtResource("16_lemb1")
bbcode_enabled = true
text = "[color=red]ERRO: [/color]Canteiro fora da área delimitada, ação cancelada!
[color=red]ERRO: [/color]Canteiro fora da área delimitada, ação cancelada!
[color=red]ERRO: [/color]Canteiro fora da área delimitada, ação cancelada!"
scroll_following = true

[node name="RobotStats" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 297.0
offset_top = -88.0
offset_right = 458.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("12_yox4t")

[node name="Margins" type="MarginContainer" parent="UI/RobotStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="UI/RobotStats/Margins"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="UI/RobotStats/Margins/VBox"]
layout_mode = 2
text = "Status robô"
label_settings = SubResource("LabelSettings_h4fw4")
uppercase = true

[node name="Console" type="RichTextLabel" parent="UI/RobotStats/Margins/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.792157, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_rku1e")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = ExtResource("16_lemb1")
bbcode_enabled = true
text = "[color=cyan]Posição: [/color]x:0 y:1
[color=Orange]Inventário: [/color](10 / 30)
[color=Green]Vegetal: [/color]Cenoura
Canteiro Vazio: [color=red]FALSO[/color]
Canteiro Seco: [color=red]FALSO[/color]
Vegetal Maduro: [color=Green]VERDADEIRO[/color]"
scroll_following = true

[node name="CommandPanel" type="Panel" parent="UI"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("12_yox4t")

[node name="Label" type="Label" parent="UI/CommandPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.937255, 0.807843, 0.537255, 1)
theme_override_fonts/font = ExtResource("10_8e3kh")
text = "Painel de Comandos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="UI/CommandPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 30.0
offset_right = -2.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("16_lemb1")

[node name="Label" type="Label" parent="UI/CommandPanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -11.5
offset_right = 56.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(56, 12)
text = "PLACEHOLDER"

[node name="BtnsArea" type="HBoxContainer" parent="UI/CommandPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -11.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Button" type="Button" parent="UI/CommandPanel/BtnsArea"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("17_a6ftd")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="UI/CommandPanel/BtnsArea"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("18_nxex1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 180)

[connection signal="pressed" from="UI/TestPanel/Functions/PlantarBtn" to="UI/TestPanel" method="_on_plantar_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/RegarBtn" to="UI/TestPanel" method="_on_regar_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/ColherBtn" to="UI/TestPanel" method="_on_colher_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/MoveBtn" to="UI/TestPanel" method="_on_move_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/OriginBtn" to="UI/TestPanel" method="_on_origin_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/MoveNextBtn" to="UI/TestPanel" method="_on_move_next_btn_pressed"]
[connection signal="pressed" from="UI/TestPanel/Functions/MovePreviousBtn" to="UI/TestPanel" method="_on_move_previous_btn_pressed"]
